# yyyt_ws

./: README.md
yabuki/openrtm/: CMakeLists.txt20240721165604  CMakeLists.txt20240721165819  Communicator.conf20240722164934  Communicator.conf20240723024850  Communicator.conf20240723195549  Communicator.py  README.md  README.md20240721165140  README.md20240722164914  RTC.xml  RTC.xml20240722164935  RTC.xml20240723024852  rtc.conf
yabuki/ros/myagv_yyyt/: CMakeLists.txt  package.xml
yabuki/ros/myagv_yyyt/config/distination/: distination.csv
yabuki/ros/myagv_yyyt/config/rviz/: navigation.rviz
yabuki/ros/myagv_yyyt/launch/: connectIphone.launch  run.launch
yabuki/ros/myagv_yyyt/src/: i2win_sendVel.py  navigation.cpp  recieve_js_pub_cmd_vel.py  recieve_js_pub_mode_msg.py  set_goal.cpp  test  webSocket.py  zeromq_test.cpp
yamauchi/: README.md
yamauchi/controller2raspai/: CMakeLists.txt  README.md  RTC.xml  RTC.xml20240722182730  controller2raspai.conf  rtc.conf
yamauchi/raspai2shougaibutsu/: CMakeLists.txt  README.md  RTC.xml  RTC.xml20240722142634  raspai2shougaibutsu.conf  rtc.conf
yokoyama/: verForFinalPresentation.axmz
yokoyama/RaspberryPiMouse_attacchment/: RasPiMouse_BacePlate_curveHole_v7.stl  RasPiMouse_BacePlate_curve_v3.stl  RasPiMouse_BacePlate_v1.stl  iphone_gondora_v6_w70.stl  iphone_gondora_v7_w62.stl
yokoyama/SeasawForRaspberryPIMouse/: rackForRasPiMouse_PlateConnect_l_NoChamferv7.stl  rackForRasPiMouse_Z_l_NoChamfer_ v16.stl  rackForRasPiMouse_Z_l_v16.stl  rackForRasPiMouse_Z_r_NoChamfer v1.stl  rackForRasPiMouse_Z_r_v16.stl  (+4 more)
(+91 files in other folders)
